# comfy-pack

./: .gitignore  README.md  __init__.py  autonode.py  monkeypatch.py  nodes.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: release.yml
comfyui_idl/: __init__.py
nodes/: __init__.py  api.py  monkeypatch.py  nodes.py  service.py  setup_workspace.py
src/comfy_pack/: __init__.py  cli.py  const.py  hash.py  model_helper.py  package.py  run.py  service.py  setup_workspace.py  utils.py
src/comfyui_idl/: __init__.py  cli.py  package.py  run.py  utils.py
web/: dynamic.js  main.js
