[project]
name = "comfy-pack"
description = "ComfyUI Interface Definition Language"
authors = [{ name = "Frost Ming", email = "frost@bentoml.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bentoml>=1.3.13",
    "click>=8.1.7",
    "comfy-cli>=1.2.8",
    "pydantic>=2.9",
]
dynamic = ["version"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/bentoml/ComfyUI-IDL"

[project.scripts]
comfy-pack = "comfy_pack.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["src/"]

[tool.pdm.version]
source = "scm"
